# mcpy-cmd

./: README.md  pyproject.toml
src/mcpy_cmd/: __init__.py  common.py  data.py  execute.py  scoreboard.py  util.py
tests/mcpy_cmd/: test_cmds.py
